# credit-risk

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.mlflow  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  test_config.py
.github/workflows/: cd.yml  ci.yml
airflow/dags/: credit_risk_dag.py
api/: app.py  model_loader.py  schemas.py
data/processed/: feature_names.pkl  preprocessor.pkl
docker/postgres-init/: create-airflow-db.sh
frontend/: app.js  index.html  style.css
monitoring/: drift.py
notebooks/: eda.ipynb
src/: config.py  test_data_load.py
src/data/: load_data.py  preprocessing.py  validate.py
src/ml/: __init__.py  evaluate.py  train.py
tests/: test_api.py  test_preprocessing.py
