[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-mlops"
version = "1.0.0"
description = "MLOps pipeline for credit risk prediction using XGBoost"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "kavish924", email = "kavish924@example.com"},
]
keywords = ["mlops", "credit-risk", "xgboost", "fastapi", "mlflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/kavish924/credit-risk"

# ── Tool Configuration ───────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "api", "monitoring", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "E402", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["src", "api", "monitoring"]

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.coverage.run]
source = ["src", "api"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.pyright]
extraPaths = ["."]
pythonVersion = "3.12"

[tool.coverage.report]
show_missing = true
fail_under = 60
